k8s/platform/monitoring/deployment-blackbox-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      automountServiceAccountToken: false
      containers:
        - name: blackbox-exporter
          image: quay.io/prometheus/blackbox-exporter:v0.27.0
          args:
            - --config.file=/etc/blackbox-exporter/config.yml
          ports:
            - name: http
              containerPort: 9115
          readinessProbe:
            httpGet:
              path: /-/ready
              port: http
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: http
          resources:
            requests:
              cpu: 5m
              memory: 40Mi
            limits:
              cpu: 20m
              memory: 48Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: config
              mountPath: /etc/blackbox-exporter
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: blackbox-exporter
